--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0"
@@ -9,7 +10,10 @@
   "description": "MERN E-commerce",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server"
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -20,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/KaranBhut44/MERN_Ecommerce/issues"
   },
-  "homepage": "https://github.com/KaranBhut44/MERN_Ecommerce#readme"
+  "homepage": "https://github.com/KaranBhut44/MERN_Ecommerce#readme",
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
+  }
 }
