--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0"
